--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
         <div class="flex justify-between text-[#3019bd] font-bold text-md pt-2">
             <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
             <div class="rating">
-                <input type="radio" name="rating-1" class="mask mask-star"/>
-                <input type="radio" name="rating-1" class="mask mask-star" checked/>
-                <input type="radio" name="rating-1" class="mask mask-star"/>
-                <input type="radio" name="rating-1" class="mask mask-star"/>
-                <input type="radio" name="rating-1" class="mask mask-star"/>
+                <input type="radio" name="rating-2" class="mask mask-star bg-[#3019bd]"/>
+                <input type="radio" name="rating-2" class="mask mask-star bg-[#3019bd]" checked/>
+                <input type="radio" name="rating-2" class="mask mask-star bg-[#3019bd]"/>
+                <input type="radio" name="rating-2" class="mask mask-star bg-[#3019bd]"/>
+                <input type="radio" name="rating-2" class="mask mask-star bg-[#3019bd]"/>
             </div>
 
             <span class="delete-note cursor-pointer pr-4 float-right">
